--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,15 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+
         <!-- OpenFeign для MultipartFile -->
         <dependency>
             <groupId>io.github.openfeign</groupId>
