--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,13 @@
 spring.cloud.config.uri=${CONFIG_SERVICE_URI:http://localhost:8888}
 spring.cloud.config.fail-fast=true
 server.port=${PORT:5012}
+
+#Eureka client disabled
+eureka.client.enabled=false
+
+#Disable discovery
+spring.cloud.discovery.enabled = false
+
+#Disable cloud config and config discovery
+spring.cloud.config.discovery.enabled = false
+spring.cloud.config.enabled = false
