--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+content.storage.url=http://localhost:8080/cs/containers
