Revert "Feature/R15/BE EDM-5575 news service SV (pull request #2)"
This reverts pull request #2.

> * initial commit
> * initial commit
> * Добавляем модель новостей
> * Сервис новостей
> * Тесты
> * Тесты
> * Еще тесты
> * интеграционные тесты контроллера
> * еще тесты
> 
> ‌

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.thewhite</groupId>
-  <artifactId>ws-news-service</artifactId>
+  <artifactId>spring-cloud-blank</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ws-news-service</name>
+  <name>spring-cloud-blank</name>
   <url>http://maven.apache.org</url>
 
     <parent>
@@ -95,15 +95,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
 
         <!-- OpenFeign для MultipartFile -->
@@ -346,6 +337,34 @@
                         <arg>-Aquerydsl.useFields=false</arg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <serverId>docker-hub-server</serverId>
+                    <imageName>thewhite/${project.artifactId}</imageName>
+                    <baseImage>java:8</baseImage>
+                    <entryPoint>["java", "-jar", "-Xms250m", "-Xmx750m", "/${project.build.finalName}.jar"]</entryPoint>
+                    <!-- copy the service's jar file from target into the root directory of the image -->
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
