--- a/src/test/resources/bootstrap.properties
+++ b/src/test/resources/bootstrap.properties
@@ -1,3 +1,6 @@
+eureka.client.enabled=false
+spring.cloud.config.enabled=false
+# data
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.username=user
