--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.8.RELEASE</version>
+        <version>1.5.14.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -21,11 +21,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Dalston.SR4</spring-cloud.version>
+        <spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
         <assertj.version>3.4.1</assertj.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
-        <org.mapstruct.version>1.1.0.Final</org.mapstruct.version>
-        <org.projectlombok.lombok.version>1.16.16</org.projectlombok.lombok.version>
+        <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
+        <org.projectlombok.lombok.version>1.16.22</org.projectlombok.lombok.version>
         <org.hibernate.javax.persistence.hibernate-jpa-2.1-api.version>
             1.0.0.Final
         </org.hibernate.javax.persistence.hibernate-jpa-2.1-api.version>
